2007-12-06  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document the Debug Console (EJAB-395)

	* src/ejabberdctl.template: The parameter 'kernel inetrc' is used
	even with -sname to guarantee the same behaviour that when using
	-name (EJAB-317)

	* doc/guide.tex: Improvements in sections: Start, Creating Initial
	Account, Module Overview, Managing an ejabberd server, and
	Debugging

2007-12-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Added explanations about epmd, cookie and node
	name (EJAB-251)

	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

	* src/mod_muc/mod_muc_room.erl: Rephrase the invitation sentence
	to make more natural

	* src/msgs/es.msg: Updated

	* src/ejabberd.hrl: Set more proper version number

	* contrib/extract_translations/extract_translations.erl: Don't
	report [] to be translated. Identify unusued strings.

2007-12-04  Badlop  <badlop@process-one.net>

	* .gitignore: Removed (EJAB-441)
	* src/.cvsignore: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: don't report the Jabber
	server as a pubsub service. Fixed URI.

2007-12-03  Mickael Remond  <mremond@process-one.net>

	* src/mod_muc.erl: Added option to limit the number of room a user is
	allowed to connect to (EJAB-445).
	* src/mod_muc_room.erl: Likewise.
	* doc/guide.tex: Likewise.:ChangeLog

2007-12-02  Badlop  <badlop@process-one.net>
	
	* src/ejabberdctl.cfg.example: Bugfix in kernel poll. Added SMP
	option. Reorganization of options
	* src/ejabberdctl.template: Added SMP option

	* src/Makefile.in: New options make uninstall and
	uninstall-all (EJAB-293)

2007-12-01  Mickael Remond  <mremond@process-one.net>

	* doc/Makefile: echo seems to interpret \n and \v under MacOSX
	Leopard. I fixed the problem but let me know if it breaks build
	chain in other contexts.

	* Doc/guide.tex: Updated Windows compilation instructions.
	* src/configure.erl: Likewise.

	* doc/ejabberd.hrl: Preparing ejabberd 2.0.0 beta release.
	* doc/version.tex: Likewise.
	